# dokan

./: .gitattributes  .gitignore  .mcp.json  .trovexignore  CHANGELOG.md  Cargo.toml  PRD.md  README.md  SECURITY.md  docker-compose.yml  install.sh  migrations.sql
.claude/: settings.json
.claude/hooks/: dokan-preflight.sh
.claude/skills/dokan/: SKILL.md
.github/workflows/: announce-release.yml  ci.yml  install-smoke.yml  release.yml
docs/: roadmap-2026.md
docs/specs/: v0.2.0-run-artifacts.md
examples/flagship/: 01-intake.js  02-score.js  03-summarize.js  04-alert.js  README.md  flow.json  run.sh
install-smoke/: CONTRACT.md  assert.sh  dokan-install-smoke.py  dokan-release-gate.Dockerfile  dokan.Dockerfile
observability/: README.md  docker-compose.yml
observability/grafana/dashboards/: dokan.json
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/grafana/provisioning/datasources/: prometheus.yml
observability/prometheus/: prometheus.yml
scripts/: dokan-bootstrap.sh  dokan-daemon.sh  operator-news-bridge.mjs
src/: cron.rs  crypto.rs  db.rs  embed.rs  exec.rs  flow.rs  http.rs  lib.rs  main.rs  mcp.rs  pool.rs  receipt.rs  scale.rs  update.rs  worker.rs
tests/: db_queries.rs  p1_engine.rs  p2_flows.rs  p3_http.rs  p3_semantic.rs  smoke.rs
