[package]
name = "dokan"
version = "0.4.0"
edition = "2024"
license = "Apache-2.0"
description = "Agent-operated, MCP-first runtime for deterministic scripts in Docker. Zero LLM inside."
repository = "https://github.com/TsukumoHQ/dokan"
homepage = "https://github.com/TsukumoHQ/dokan"
readme = "README.md"
keywords = ["mcp", "automation", "docker", "agent", "workflow"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
rmcp = { version = "1.7", features = [
    "server",
    "client",
    "macros",
    "transport-io",
    "transport-child-process",
    "transport-streamable-http-server",
] }
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls-ring",
    "postgres",
    "chrono",
    "json",
] }
bollard = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hmac = "0.12"
ed25519-dalek = "2"
chacha20poly1305 = "0.10"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
tokio-cron-scheduler = "0.15"
uuid = "1"
# rustls everywhere (not native-tls) so the release binary carries NO dynamic libssl.so.3 dep —
# fastembed's default pulls hf-hub + ort on native-tls/openssl, which makes `dokan` fail to run on
# lean images that lack libssl (node/debian-slim). TSU-224 portability fix.
fastembed = { version = "5", default-features = false, features = [
    "ort-download-binaries-rustls-tls",
    "hf-hub-rustls-tls",
    "image-models",
] }
pgvector = { version = "0.4", features = ["sqlx"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver = "1"
